[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncer>=0.0.11",
    "click>=8.3.1",
    "filetype>=1.2.0",
    "onnxruntime>=1.23.2",
    "pillow>=12.0.0",
    "pooch>=1.8.2",
    "rembg>=2.0.68",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
